@@ -27,6 +27,7 @@ Bug fixes
     * Fix filtering songs in the current playlist
     * Fix DND of custom artwork images in the main window
     * Fix breadcrumb icon in the library while browsing an album while in Artist view
+    * Fix saving the visibility flag of tabs: https://github.com/multani/sonata/issues/45
 
 Internal changes
 ''''''''''''''''
